yaml3.0/deployment_nginx.yaml
name: nginx-efs
#접속 빈도 높은 페이지 :  레플리카 수 증가, 빠른 롤링 업데이트, CPU 자원 증가
#개런티는 보장하되 maxSkew, 노드셀렉터 수정
#최종제출시에는 index, menu 페이지는 replicas = 4로 증가(hpa도 같이 수정)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-index
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  topologySpreadConstraints:
  - maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
    labelSelector:
      matchLabels:
        failure-domain.beta.kubernetes.io/zone: ap-northeast-2a
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: index
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nginx
        name: index
    spec:
      containers:
      - image: 975050099328.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-index:v1.0
        name: nginx-index-deploy
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/data"
          name: nginx-efs
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 2
      volumes:
        - name: nginx-efs
          persistentVolumeClaim:
            claimName: pvc-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-menu
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  topologySpreadConstraints:
  - maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
    labelSelector:
      matchLabels:
        failure-domain.beta.kubernetes.io/zone: ap-northeast-2a
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: menu
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nginx
        name: menu
    spec:
      containers:
      - image: 975050099328.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-menu:v1.0
        name: nginx-menu-deploy
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/data"
          name: nginx-efs
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /menu.jsp
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 2
      volumes:
        - name: nginx-efs
          persistentVolumeClaim:
            claimName: pvc-nginx

            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-login
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  topologySpreadConstraints:
  - maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
    labelSelector:
      matchLabels:
        failure-domain.beta.kubernetes.io/zone: ap-northeast-2c
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: login
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: login
    spec:
      containers:
      - image: 975050099328.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-login:v1.0
        name: nginx-login-deploy
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/data"
          name: nginx-efs
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /login.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: nginx-efs
          persistentVolumeClaim:
            claimName: pvc-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-join
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  topologySpreadConstraints:
  - maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
    labelSelector:
      matchLabels:
        failure-domain.beta.kubernetes.io/zone: ap-northeast-2c
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: join
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: join
    spec:
      containers:
      - image: 975050099328.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-join:v1.0
        name: nginx-join-deploy
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/data"
          name: nginx-efs
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /join.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: nginx-efs
          persistentVolumeClaim:
            claimName: pvc-nginx


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mypage
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  topologySpreadConstraints:
  - maxSkew: 1
    topologyKey: kubernetes.io/hostname
    whenUnsatisfiable: ScheduleAnyway
    labelSelector:
      matchLabels:
        failure-domain.beta.kubernetes.io/zone: ap-northeast-2c
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: mypage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nginx
        name: mypage
    spec:
      containers:
      - image: 975050099328.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-mypage:v1.0
        name: nginx-mypage-deploy
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/data"
          name: nginx-efs
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /mypage.jsp
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: nginx-efs
          persistentVolumeClaim:
            claimName: pvc-nginx
