yaml3.0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # arn 값 수정 필요
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:975050099328:certificate/a95faaf5-7f70-4137-be67-e7e2bddaef55
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: ingress
  rules:
    - host: eunchae.shop
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-index-service
              port:
                number: 80
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: nginx-login-service
              port:
                number: 80
        - path: /join
          pathType: Prefix
          backend:
            service:
              name: nginx-join-service
              port:
                number: 80
        - path: /menu
          pathType: Prefix
          backend:
            service:
              name: nginx-menu-service
              port:
                number: 80
        - path: /mypage
          pathType: Prefix
          backend:
            service:
              name: nginx-mypage-service
              port:
                number: 80
